- Update parent pom to 13.10 so as to be aligned with the   glossary-machine-translation module which uses this extension   as dependency